--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.11",
     "uplink-nodejs": "^1.2.6"
   },
   "devDependencies": {
