--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "fs": false,
     "path": false,
     "os": false
+  },
+  "engines": {
+    "node": ">=14.0.0 <=16.0.0",
+    "npm": ">=6.0.0 <=7.0.0"
   }
 }
