--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
+    "node-gyp": "^9.3.1",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
@@ -26,14 +27,5 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
-  },
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
-  },
-  "engines": {
-    "node": ">=14.0.0 <=16.0.0",
-    "npm": ">=6.0.0 <=7.0.0"
   }
 }
